event's part image cards gapping fixed

--- a/static/assets/scss/bootstrap/_card.scss
+++ b/static/assets/scss/bootstrap/_card.scss
@@ -13,6 +13,7 @@
   background-clip: border-box;
   border: $card-border-width solid $card-border-color;
   @include border-radius($card-border-radius);
+  margin-bottom: 15px;
 
   > hr {
     margin-right: 0;
